Introduce route for user's wows

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <base href="/">
+
     <title>Potoo Bitches!!!</title>
 
     <!-- 1. Load libraries -->
@@ -13,6 +15,7 @@
     <script src="lib/Rx.js"></script>
     <script src="lib/angular2.dev.js"></script>
     <script src="lib/http.dev.js"></script>
+    <script src="lib/router.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -29,6 +32,7 @@
     </script>
 
 </head>
+
 
 <!-- 3. Display the application -->
 <body>
