Squashed commit of the following:
commit 68ddf5a6c833dea35d212365fc52bf8b01e8b27b
Author: George Karanikas <gkaran89@gmail.com>
Date:   Sun Apr 10 11:59:56 2016 +0300

    Started working on frontend

commit f80204f85620301c165e0a94df3414dd8aba83df
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:40:05 2016 +0300

    "Fixed" some backend tests - Still need a lot to fix

commit e6eb1736f113bc814f6883918b868f80aa0ee991
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:39:41 2016 +0300

    Fixed frontend (somewhat)

commit ec822c4680df5425c87bf270bbb6d3ea72408044
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:39:23 2016 +0300

    Fixed backend

commit 87fec00170c3419455e5705f50fac8bb8c4e6efb
Author: George Karanikas <gkaran89@gmail.com>
Date:   Thu Mar 31 22:56:55 2016 +0300

    Several fixes including model changes and mostly security. Added JWT security

commit bb92183bd05b3bd461e627baf2e2bbb1db6b94c6
Author: George Karanikas <gkaran89@gmail.com>
Date:   Thu Mar 24 00:14:44 2016 +0200

    Fix missing dependency

commit 7adc8ffd17063095af01c1227a114e09f13e0702
Author: George Karanikas <gkaran89@gmail.com>
Date:   Wed Mar 23 23:53:57 2016 +0200

    Components restructure/creation

    - Split components to .ts, .html and .css files
    - Introduce some new components for better organization

commit 9a32661db3d22b2ca254b00bc8be1a3771f19787
Author: George Karanikas <gkaran89@gmail.com>
Date:   Wed Mar 23 23:52:51 2016 +0200

    Fix live reload and dev mode

commit e9e34c6730ec2132348f613946ffe8811538c7fd
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Mar 22 00:36:44 2016 +0200

    Introduce basic entry page

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -17,6 +17,18 @@
     <script src="lib/http.dev.js"></script>
     <script src="lib/router.dev.js"></script>
 
+    <script src="lib/ng2-bootstrap.min.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.12.2.min.js"
+            integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+            crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
@@ -30,6 +42,12 @@
         System.import('app/boot')
                 .then(null, console.error.bind(console));
     </script>
+
+    <style type="text/css">
+        body {
+            background-color: #8E8E8C;
+        }
+    </style>
 
 </head>
 
